# DisTreebution

./: .buildinfo  README.md  genindex.html  index.html  installation.html  objects.inv  presentation.html  py-modindex.html  pyproject.toml  references.html  repository.html  search.html  searchindex.js  setup.cfg  setup.py  team.html
CRPStreeC/: RegressionTree.py  WBTree.py  Weighted_FenwickTree.py  entropies_CRPS.py  get_entropy.py  test_CRPS.ipynb
DisTreebution/: __init__.py
DisTreebution/CRPSRT/: FenwickTree.py  RegressionTree.py  WBTree.py  __init__.py  entropies_CRPS.py
DisTreebution/QRT/: MinMaxHeap.py  RegressionTreeQuantile.py  __init__.py  entropies_MultiQuantiles.py
DisTreebution/RT/: RegressionTreeQuadratic.py  __init__.py  entropies_Quadratic.py
DisTreebution/UQ/: Conformalisation.py  Conformalisation_CQR.py  Conformalisation_distributional.py  UQ.py  __init__.py  datasets.py  utils.py
QRT/: entropies_MultiQuantiles.py
UQ/: Conformalisation.py  Conformalisation_CQR.py  Conformalisation_CQR_PQRT.py  Conformalisation_distri.py  Conformalisation_distri_PQRT.py  UQ.py  datasets.py
_modules/: index.html
_sources/: index.rst.txt  installation.rst.txt  presentation.rst.txt  references.rst.txt
_sources/documentation/: DisTreebution.RT.rst.txt  (+1 more)
developer/: index.html
documentation/: DisTreebution.CRPSRT.html  DisTreebution.QRT.html  DisTreebution.RT.html  DisTreebution.UQ.html  DisTreebution.html  modules.html
experiments/: CRPS_time_complexity_and_group_conformal.ipynb  experiments_paper.py  tutorial.ipynb
tutorials/: index.html
(+44 files in other folders)
