[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distreebution"
version = "0.1.0"
description = "Decision-tree based conformal prediction and uncertainty quantification"
readme = "package_docs/README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "tqdm",
]

[project.optional-dependencies]
dev = ["matplotlib"]
