[metadata]
name = distreebution
version = 0.1.0
description = Regression-tree based conformal prediction and uncertainty quantification
author = Quentin Duchemin
author_email = quentin.duchemin@epfl.ch
license = MIT
long_description = file: package_docs/README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    pandas
    tqdm

[options.extras_require]
dev =
    matplotlib

[bdist_wheel]
universal = 1
